// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinistryContactForm renders properly for creating contact 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-vertical common-form common-form-MINISTRY_CONTACT_FORM form-edit"
      id="MINISTRY_CONTACT_FORM"
    >
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-12"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_is_major_mine"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Is this a Major Mine Contact?
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-radio-group ant-radio-group-solid"
                    >
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            name="is_major_mine"
                            type="radio"
                            value="true"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          Yes
                        </span>
                      </label>
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio ant-radio-checked"
                        >
                          <input
                            checked=""
                            class="ant-radio-input"
                            name="is_major_mine"
                            type="radio"
                            value="false"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          No
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_is_major_mine_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-md-12"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_mine_region_code"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Mine Region
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="mine_region_code"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="mine_region_code_list_0"
                            aria-autocomplete="list"
                            aria-controls="mine_region_code_list"
                            aria-haspopup="listbox"
                            aria-owns="mine_region_code_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="mine_region_code"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select a mine Region
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_mine_region_code_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-md-12"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_emli_contact_type_code"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Contact Type
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="emli_contact_type_code"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="emli_contact_type_code_list_0"
                            aria-autocomplete="list"
                            aria-controls="emli_contact_type_code_list"
                            aria-haspopup="listbox"
                            aria-owns="emli_contact_type_code_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="emli_contact_type_code"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="ROE"
                        >
                          ROE
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        aria-hidden="true"
                        class="ant-select-clear"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="close-circle"
                          class="anticon anticon-close-circle"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close-circle"
                            fill="currentColor"
                            fill-rule="evenodd"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_emli_contact_type_code_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_email"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Email
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-label="email"
                      class="ant-input"
                      data-testid="email"
                      id="email"
                      name="email"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_email_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_phone_number"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Phone Number
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-label="phone_number"
                      class="ant-input"
                      data-testid="phone_number"
                      id="phone_number"
                      name="phone_number"
                      placeholder="e.g. xxx-xxx-xxxx"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_phone_number_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="MINISTRY_CONTACT_FORM_fax_number"
                  title=""
                >
                  <div>
                    Fax Number
                     
                    <span
                      class="form-item-optional"
                    >
                       (optional)
                    </span>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-label="fax_number"
                      class="ant-input"
                      data-testid="fax_number"
                      id="fax_number"
                      name="fax_number"
                      placeholder="e.g. xxx-xxx-xxxx"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_fax_number_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_mailing_address_line_1"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Mailing Address Line 1
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input"
                      id="mailing_address_line_1"
                      name="mailing_address_line_1"
                      style="height: 0px; resize: none; min-height: -12px;"
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_mailing_address_line_1_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_mailing_address_line_2"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Mailing Address Line 2
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input"
                      id="mailing_address_line_2"
                      name="mailing_address_line_2"
                      style="height: 0px; resize: none; min-height: -12px;"
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_mailing_address_line_2_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="form-multiselect"
          >
            <div
              class="ant-form-item ant-form-item-with-help"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class=""
                    for="MINISTRY_CONTACT_FORM_distribution_list_guids"
                    title=""
                  >
                    <div>
                      Notification Groups
                       
                      <span
                        class="form-item-optional"
                      >
                         (optional)
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-sm ant-select-in-form-item ant-select-multiple ant-select-show-arrow ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="distribution_list_guids_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="distribution_list_guids_list"
                                  aria-haspopup="listbox"
                                  aria-owns="distribution_list_guids_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="distribution_list_guids"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            Select Notification Groups
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    style="display: flex; flex-wrap: nowrap;"
                  >
                    <div
                      class="ant-form-item-explain ant-form-item-explain-connected"
                      id="MINISTRY_CONTACT_FORM_distribution_list_guids_help"
                      role="alert"
                    >
                      <div
                        class=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="right center-mobile"
      >
        <button
          aria-label="Cancel"
          class="ant-btn ant-btn-default core-btn core-btn-default  form-btn"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          aria-label="Submit"
          class="ant-btn ant-btn-primary  form-btn"
          type="submit"
        >
          <span>
            Create
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`MinistryContactForm renders properly for editing contact 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-vertical common-form common-form-MINISTRY_CONTACT_FORM form-edit"
      id="MINISTRY_CONTACT_FORM"
    >
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-12"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_is_major_mine"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Is this a Major Mine Contact?
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-radio-group ant-radio-group-solid"
                    >
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-disabled ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio ant-radio-disabled"
                        >
                          <input
                            class="ant-radio-input"
                            disabled=""
                            name="is_major_mine"
                            type="radio"
                            value="true"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          Yes
                        </span>
                      </label>
                      <label
                        class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-disabled ant-radio-wrapper-in-form-item"
                      >
                        <span
                          class="ant-radio ant-radio-checked ant-radio-disabled"
                        >
                          <input
                            checked=""
                            class="ant-radio-input"
                            disabled=""
                            name="is_major_mine"
                            type="radio"
                            value="false"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          No
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_is_major_mine_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-md-12"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_mine_region_code"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Mine Region
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled ant-select-show-search"
                      data-cy="mine_region_code"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="mine_region_code_list_0"
                            aria-autocomplete="list"
                            aria-controls="mine_region_code_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="mine_region_code_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="mine_region_code"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select a mine Region
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_mine_region_code_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-md-12"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_emli_contact_type_code"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Contact Type
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-disabled ant-select-show-search"
                      data-cy="emli_contact_type_code"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="emli_contact_type_code_list_0"
                            aria-autocomplete="list"
                            aria-controls="emli_contact_type_code_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="emli_contact_type_code_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="emli_contact_type_code"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="ROE"
                        >
                          ROE
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_emli_contact_type_code_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_email"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Email
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-label="email"
                      class="ant-input"
                      data-testid="email"
                      id="email"
                      name="email"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_email_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_phone_number"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Phone Number
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-label="phone_number"
                      class="ant-input"
                      data-testid="phone_number"
                      id="phone_number"
                      name="phone_number"
                      placeholder="e.g. xxx-xxx-xxxx"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_phone_number_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="MINISTRY_CONTACT_FORM_fax_number"
                  title=""
                >
                  <div>
                    Fax Number
                     
                    <span
                      class="form-item-optional"
                    >
                       (optional)
                    </span>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-label="fax_number"
                      class="ant-input"
                      data-testid="fax_number"
                      id="fax_number"
                      name="fax_number"
                      placeholder="e.g. xxx-xxx-xxxx"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_fax_number_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_mailing_address_line_1"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Mailing Address Line 1
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input"
                      id="mailing_address_line_1"
                      name="mailing_address_line_1"
                      style="height: 0px; resize: none; min-height: -12px;"
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_mailing_address_line_1_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="MINISTRY_CONTACT_FORM_mailing_address_line_2"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Mailing Address Line 2
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input"
                      id="mailing_address_line_2"
                      name="mailing_address_line_2"
                      style="height: 0px; resize: none; min-height: -12px;"
                    />
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="MINISTRY_CONTACT_FORM_mailing_address_line_2_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 8px; padding-right: 8px;"
        >
          <div
            class="form-multiselect"
          >
            <div
              class="ant-form-item ant-form-item-with-help"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class=""
                    for="MINISTRY_CONTACT_FORM_distribution_list_guids"
                    title=""
                  >
                    <div>
                      Notification Groups
                       
                      <span
                        class="form-item-optional"
                      >
                         (optional)
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-sm ant-select-in-form-item ant-select-multiple ant-select-show-arrow ant-select-show-search"
                        style="width: 100%;"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="distribution_list_guids_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="distribution_list_guids_list"
                                  aria-haspopup="listbox"
                                  aria-owns="distribution_list_guids_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="distribution_list_guids"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                  
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="ant-select-selection-placeholder"
                          >
                            Select Notification Groups
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    style="display: flex; flex-wrap: nowrap;"
                  >
                    <div
                      class="ant-form-item-explain ant-form-item-explain-connected"
                      id="MINISTRY_CONTACT_FORM_distribution_list_guids_help"
                      role="alert"
                    >
                      <div
                        class=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="right center-mobile"
      >
        <button
          aria-label="Cancel"
          class="ant-btn ant-btn-default core-btn core-btn-default  form-btn"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          aria-label="Submit"
          class="ant-btn ant-btn-primary  form-btn"
          type="submit"
        >
          <span>
            Update
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
